--- a/trunk/README
+++ b/trunk/README
@@ -1,8 +1,8 @@
 cfgparse is a Python module that implements basic mechanisms for
-managing configuration information. It is compatiable with ConfigParser
+managing configuration information. It is compatible with ConfigParser
 while preserving the structure of INI files (i.e. order of sections &
 options, comments, blank lines are preserved) and allows convenient
-access to data.  Compatiability has been tested using the unit tests
+access to data.  Compatibility has been tested using the unit tests
 included with Python-2.3.4.
 
 URL: http://www.cs.wisc.edu/~param/software/cfgparse/
