--- a/trunk/README
+++ b/trunk/README
@@ -1,9 +1,22 @@
-cfgparse is a Python module that implements basic mechanisms for
-managing configuration information. It is compatible with ConfigParser
-while preserving the structure of INI files (i.e. order of sections &
-options, comments, blank lines are preserved) and allows convenient
-access to data.  Compatibility has been tested using the unit tests
-included with Python-2.3.4.
+cfgparse is a Python module that provides mechanisms for managing
+configuration information. It is backward compatible with
+ConfigParser, in addition to having the following features:
+
+* Preserves structure of INI files: Order of sections & options,
+  indentation (to some extent), comments, and blank lines are
+  preserved when data is updated.
+
+* More convenient than ConfigParser: Values can be accessed using
+  dotted notation, or using container syntax (cfg[key]).
+
+* Backward compatibility: Backward compatible implementations of
+  ConfigParser, RawConfigParser, and SafeConfigParser are included
+  that are API-compatible with the Python standard library. They
+  pass all the unit tests in Python-2.3.4.
+
+* Extensible: It is possible to add other configuration formats,
+  and to convert between different formats (as long as the data
+  models are compatiable).
 
 URL: http://www.cs.wisc.edu/~param/software/cfgparse/
 
