--- a/trunk/Changelog
+++ b/trunk/Changelog
@@ -1,4 +1,9 @@
 2007-07-10
+* renamed project to iniparse
+* renamed classes to reflect new project name
+* made names more friendly and PEP 8 compliant
+
+2007-07-10
 * imported into google-code
 
 2004-10-03
