--- a/wiki/UsageExamples.wiki
+++ b/wiki/UsageExamples.wiki
@@ -1,8 +1,6 @@
 #summary Examples of how to use iniparse.
 
-=Usage Examples=
-
-==New API==
+*New API:*
 
 Open an INI file:
 {{{
@@ -33,7 +31,7 @@ display_qlength = True
 width = 200
 }}}
 
-==Backword Compatiable API==
+*Backword Compatiable API:*
 
 The entire !ConfigParser API is supported.  This is just a brief example:
 {{{
