--- a/trunk/Changelog
+++ b/trunk/Changelog
@@ -1,3 +1,7 @@
+2008-12-06
+* add hack to fix unicode support on python-2.4.x
+* use the built-in set() type instead of the pre-2.4 sets module
+
 2008-04-06
 * support files opened in unicode mode
 * handle BOMs in unicode mode
