--- a/trunk/Changelog
+++ b/trunk/Changelog
@@ -1,4 +1,12 @@
 2008-12-06
+* upgraded test_compat to the tests included with python-2.6.1
+* Python's ConfigParser has acquired the ability to use custom dict
+  types - presumably to support user-controlled ordering.  This
+  feature does not seem to make sense in the context of iniparse,
+  so I'm not planning on adding support for it (unless I hear
+  otherwise from users).
+
+2008-12-05
 * add hack to fix unicode support on python-2.4.x
 * use the built-in set() type instead of the pre-2.4 sets module
 
