--- a/trunk/Changelog
+++ b/trunk/Changelog
@@ -1,3 +1,8 @@
+2009-02-03
+* Bugfixes for continuation line behavior, based on patch by
+  sidnei.da.silva - (1) preserve empty lines in multi-line
+  values, and (2) fix assignment to multi-line values
+
 2008-12-06
 * released 0.2.4
 
