Ensure that all paths to access values via the compat.* objects go through _compat_get().  Also, fix the defaults() method (it was totally broken).

--- a/trunk/Changelog
+++ b/trunk/Changelog
@@ -1,4 +1,5 @@
 2009-02-22
+* Fix the defaults() method
 * Replicate ConfigParser behavior regarding empty lines in
   multi-line values - empty lines are stripped on parsing,
   but preserved when the value is explicitly set.
