Make ConfigNamespace objects pickleable. This fixes issue 10.
I feel I'm repeating myself too much in the
tests... I need to take a broad look at the
tests sometime and do some cleanup.

--- a/trunk/Changelog
+++ b/trunk/Changelog
@@ -1,4 +1,5 @@
 2009-02-22
+* Make INIConfig objects pickle-able
 * Fix the defaults() method
 * Replicate ConfigParser behavior regarding empty lines in
   multi-line values - empty lines are stripped on parsing,
