Edited wiki page through web user interface.

--- a/wiki/UsageExamples.wiki
+++ b/wiki/UsageExamples.wiki
@@ -27,13 +27,13 @@ width = 150
 Access INI file data:
 {{{
 >>> cfg = INIConfig(open('options.ini'))
->>> print cfg.playlist.expand_playlist
-True
->>> print cfg.ui.width
-150
+>>> cfg.playlist.expand_playlist
+'True'
+>>> cfg.ui.width
+'150'
 >>> cfg.ui.width = '200'
->>> print cfg['ui']['width']
-200
+>>> cfg['ui']['width']
+'200'
 }}}
 
 Changes to data are not saved automatically.  You must write to the INI file explicitly as shown in the first example.
@@ -45,8 +45,8 @@ See the [http://docs.python.org/lib/module-ConfigParser.html Python library docu
 >>> from iniparse import ConfigParser
 >>> cfgpr = ConfigParser()
 >>> cfgpr.read('options.ini')
->>> print cfgpr.get('ui', 'width')
-150
+>>> cfgpr.get('ui', 'width')
+'150'
 >>> cfgpr.set('ui', 'width', '175')
 }}}
 
@@ -56,6 +56,6 @@ The new API can also be accessed via backword-compatible objects:
 >>> print cfgpr.data.playlist.expand_playlist
 True
 >>> cfgpr.data.ui.width = '200'
->>> print cfgpr.data.ui.width
-200
+>>> cfgpr.data.ui.width
+'200'
 }}}
